--- a/index.html
+++ b/index.html
@@ -4,12 +4,41 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
 
-    
+    <div id="app">
+      <div class="display">
+        <input id="value" type="text" readonly>
+      </div>
 
-    <script src="mains.js"></script>
+      <div class="controls">
+        <div class="btn actions eraseAll">AC</div>
+        <div class="btn actions"></div>
+        <div class="btn actions"></div>
+        <div class="btn actions"><</div>
+        <div class="btn one">1</div>
+        <div class="btn two">2</div>
+        <div class="btn three">3</div>
+        <div class="btn operator div">/</div>
+        <div class="btn four">4</div>
+        <div class="btn five">5</div>
+        <div class="btn six">6</div>
+        <div class="btn operator multi">x</div>
+        <div class="btn seven">7</div>
+        <div class="btn eight">8</div>
+        <div class="btn nine">9</div>
+        <div class="btn operator sub">-</div>
+        <div class="btn">.</div>
+        <div class="btn zero">0</div>
+        <div class="btn operator-equal">=</div>
+        <div class="btn operator plus">+</div>
+      </div>
+    </div>
+
+    <script src="main.js"></script>
   </body>
 </html>
