--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="btn eight">8</div>
         <div class="btn nine">9</div>
         <div class="btn operator sub">-</div>
-        <div class="btn">.</div>
+        <div class="btn dot">.</div>
         <div class="btn zero">0</div>
         <div class="btn operator-equal">=</div>
         <div class="btn operator plus">+</div>
