--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
       <div class="controls">
         <div class="btn actions eraseAll">AC</div>
+        <div class="btn actions elevate">^2</div>
         <div class="btn actions"></div>
-        <div class="btn actions"></div>
-        <div class="btn actions"><</div>
+        <div class="btn actions erase"><</div>
         <div class="btn one">1</div>
         <div class="btn two">2</div>
         <div class="btn three">3</div>
